--- a/HousePricePrediction/HousePricePrediction.ipynb
+++ b/HousePricePrediction/HousePricePrediction.ipynb
@@ -15,8 +15,21 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "**A. Import Semua Library yang Diperlukan**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9TmHSQabby_i"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "0XNu9zmvgfcB"
       },
@@ -33,6 +46,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**B. Membuat dataframe dari data HousePricePrediction.csv**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "> Pertama, kita akan membuat dataframe baru dengan menggunakan fungsi read_csv(). Sebelum lanjut untuk memproses data, kita perlu tahu informasi penting mengenai data. Melalui fungsi info(), terlihat bahwa terdapat ketidaksamaan jumlah data. Data pada kolom total_bedrooms lebih sedikit dari kolom lainnya. Maka dari itu, menyamakan jumlah data pada setiap kolom dengan fungsi dropna(). Seluruh data jumlahnya akan sama dengan jumlah data kolom total_bedrooms.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4_lTzARudFEp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data = pd.read_csv(\"sample_data/HousePricePrediction.csv\")\n",
@@ -46,7 +75,7 @@
         },
         "outputId": "cf1d8608-6aea-4905-f5da-e524ef8d88a2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +390,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data.info() # Jumlah data tidak sama"
+        "data.info() "
       ],
       "metadata": {
         "colab": {
@@ -370,7 +399,7 @@
         "id": "S_6w6UMTuubB",
         "outputId": "a8d03ea6-6269-439a-bac2-2e0b65be9229"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,7 +440,7 @@
         },
         "outputId": "813f7250-9b46-48df-b7e6-ee66f5797039"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,6 +753,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**C. Data Features (X) dan Data Target (y)**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "> Kita perlu untuk menentukan kolom yang akan menjadi data target. Dalam konteks ini, kita akan membuat *machine learning* sederhana untuk memprediksi harga rumah. Sehingga data target akan diambil dari kolom median_house_value dan sisanya akan menjadi data features. Dalam ML, kita perlu menyediakan dua jenis data yaitu *trainset* dan *testset*. *Trainset* akan digunakan untuk melatih model dan *testset* digunakan untuk mengukur akurasi dari model. Pembagian data tidak perlu dilakukan secara manual. Salah satu fungsi dari Sklearn yaitu *train_test_split* akan secara otomatis membagi data.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SqjgOz9YfLrE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X = data.drop([\"median_house_value\"], axis=1)\n",
@@ -734,8 +780,25 @@
       "metadata": {
         "id": "FrvLT0vbiov9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**D. Train Data**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "> Train data merupakan gabungan dari data X_train dan y_train yang digabung dengan method join(). \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NCLjJJFng0tE"
+      }
     },
     {
       "cell_type": "code",
@@ -751,7 +814,7 @@
         },
         "outputId": "2cb1a5ae-eed8-40cf-eacb-1e33a015a33a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1139,7 @@
         "id": "KxsP2HnDP4JD",
         "outputId": "1f2fa340-3460-4b42-fe6f-f40b59d19013"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1122,7 +1185,7 @@
         "id": "u6NU5pTmQCda",
         "outputId": "f75b1ded-d7f1-4019-ddf7-9ff4df3c5a82"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1226,7 @@
         "id": "rSFTAYS-RFYO",
         "outputId": "cc9e73a2-bfb8-42ee-88a6-85f6c8ad2879"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1207,7 +1270,7 @@
         "id": "AkIL93gOQSI0",
         "outputId": "1f621b4d-f74a-4b78-b1f2-479090b9014c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1240,7 +1303,7 @@
         "id": "PV0NRCzETAqv",
         "outputId": "c2a0112f-9fce-4f88-fb4f-340568a65c22"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1544,7 @@
         "id": "FCj9rpODSIuU",
         "outputId": "bb33ac19-648c-4317-c361-04a64526760c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1855,7 +1918,7 @@
         "id": "EHknmUAzSZzd",
         "outputId": "442acdd0-7c2c-4ffd-e743-e5775d0b7897"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1893,7 +1956,7 @@
         "id": "kJtbN4xgTSnT",
         "outputId": "b9b95468-38a1-4244-b5b0-b98ff84709af"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1926,7 +1989,7 @@
       "metadata": {
         "id": "JIQTcLZqT7DM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1943,7 +2006,7 @@
         "id": "hXo4o59_VDhV",
         "outputId": "1d8b8b7c-5712-4380-f50d-81ff4993ad4e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1975,7 +2038,7 @@
       "metadata": {
         "id": "zTACanyCGJKs"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1991,7 +2054,7 @@
         "id": "-kVoC_RBGyXc",
         "outputId": "f3589d02-3ea4-4a32-ce5e-34a5c95a2c80"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2382,7 +2445,7 @@
         "id": "HADbI-vRVGxz",
         "outputId": "0f697c86-6f28-4790-c4cb-f5de9e16dfc2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2422,7 +2485,7 @@
         },
         "outputId": "da69f087-3c6b-413b-e0df-be6995dc33cd"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2772,7 +2835,7 @@
         "id": "U_rzjqgwYpg4",
         "outputId": "32be696f-d66b-4b8d-e743-4d7cdd563967"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3006,7 +3069,7 @@
       "metadata": {
         "id": "hP_bXy6VHLmU"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3022,7 +3085,7 @@
         "id": "G_6geNI2HlWG",
         "outputId": "f4a4f15e-c276-4ab4-87ea-ecb717bd3ca8"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3432,7 +3495,7 @@
         "id": "MReHGCzEICpS",
         "outputId": "99e028ff-b77b-4a73-afd1-ba4dbfcf3eed"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3826,7 +3889,7 @@
       "metadata": {
         "id": "Dunfh9xYJV_5"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3841,7 +3904,7 @@
         "id": "A408jz-aJn17",
         "outputId": "4a98926e-54ed-4ba8-88c6-c1b5247de70c"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3869,7 +3932,7 @@
         "id": "oQMqgnLOJ7mb",
         "outputId": "9a9983f1-76fb-48a1-97bc-4457b81f2226"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4261,7 +4324,7 @@
       "metadata": {
         "id": "61rLxAxOWj4g"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4276,7 +4339,7 @@
         "id": "5SBgQaChXlFd",
         "outputId": "e7a6589f-e935-49ef-8fde-21cc01f44b66"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4302,7 +4365,7 @@
         },
         "outputId": "3a11f02a-2d65-4aa1-f269-9dc478509ac8"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4331,7 +4394,7 @@
         "id": "6_rYnn-sIpMj",
         "outputId": "daae1813-32d9-4cb8-e183-162e1ff32fa1"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4366,7 +4429,7 @@
         "id": "wYR6RtNgJQnC",
         "outputId": "ae515d0a-db45-453d-af86-9e0004195a85"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4397,7 +4460,7 @@
         "id": "2lRqocyGMWdo",
         "outputId": "4c5fdb26-382d-4260-fcad-c84b90fb2355"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4426,7 +4489,7 @@
         "id": "lriGgLqlM0mr",
         "outputId": "5f3bc93a-dcd4-4c7c-a3c4-60d70fa08988"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4456,7 +4519,7 @@
         "id": "U8wTFCAQOC4h",
         "outputId": "90089162-427f-419a-e35c-d52c33a7eb20"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4485,7 +4548,7 @@
         "id": "Bj5oSgs7NV2i",
         "outputId": "451ea2fa-5752-4ebf-8552-96d053e30cf4"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4511,7 +4574,7 @@
         "id": "0vYWm2kYN-Xo",
         "outputId": "eb64fb16-1f0f-4d82-e2e5-508db69dc14a"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4546,7 +4609,7 @@
         "id": "d7JN9XbbOSk8",
         "outputId": "7345344c-dcea-4eda-a233-74e625160e66"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4586,7 +4649,7 @@
       "metadata": {
         "id": "Y87zi5pwOSzT"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4601,7 +4664,7 @@
         "id": "5J6owSjLUdZ4",
         "outputId": "fb5f3416-fc24-4fd2-91b7-9a9a362b832c"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4612,33 +4675,6 @@
           },
           "metadata": {},
           "execution_count": 81
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "best2 = grid_search.best_estimator_\n",
-        "best.score(X_test_scl, y_test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SWw6xJlmUmZq",
-        "outputId": "5ebd02c5-29f7-4e89-8f2d-990ad8b4a25f"
-      },
-      "execution_count": 79,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8187816479946445"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 79
         }
       ]
     }
